apps/plex/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  namespace: plex
spec:
  selector:
    app: plex
  ports:
  - name: plex-web
    port: 32400
    targetPort: 32400
  type: LoadBalancer
