apps/plex/06-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.${CLUSTER_DOMAIN}`)
      kind: Rule
      services:
        - name: plex
          port: 32400
          scheme: http
  tls:
    secretName: plex-tls
